maven pom modification testU testIT
meilleur gestion des test unitaires et d'intégration